--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -116,8 +116,8 @@
 
 <p>Understanding the tax obligations based on the individual:</p>
 <ul>
-<li><a href="#tab1" class="wb-tabs-ext">PSB</a> </li>
 <li><a href="#tab2" class="wb-tabs-ext">Payer</a> - Payments made to a PSB</li>
+<li><a href="#tab1" class="wb-tabs-ext">PSB</a> </li>
 </ul>   
 
  <div class="wb-tabs">
@@ -126,47 +126,56 @@
 <details id="tab2"> <summary>Payer</summary>
 <p>Understanding the payer's tax obligations:</p>
 <ul>
-<li><a href="#2A">Withholding and remitting deductions from the payment</a> </li>
-<li><a href="#2B">Reporting and distributing the slip</a> </li>
-<li><a href="#2C">Reporting the payment on the payer's income tax return</a> </li>
+<li><a href="#2A">Payroll obligations</a> </li>
+<li><a href="#2B">Income tax obligations</a> </li>
+<li><a href="#2C">GST/HST obligations</a> </li>
+<li><a href="#2D">Other tax obligations</a> </li>
 </ul> 
 
-<h2 id="1A">Withholding and remitting deductions from the payment</h2>
+
+<h2 id="2A">Payroll obligations </h2>
+<p>Generally, any person must open a payroll account, calculate payroll deductions and contributions, remit (pay) deductions and contributions, and file information returns if they make payments to a self-employed worker.</p>
+
+<details><summary>Withholding and remitting deductions</summary>
 <p>If the payer makes a payment related to provision of services to a PSB, the withholding and remitting are different depending on <strong>who the payment is made to</strong>.</p>
 
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/fees-other-amounts-services.html">Payments of fees for services</a></p>
+</details>
+<p>If the payer pays a fee to a PSB to provide a service outside of an employment relationship or tenure of office, the payer <strong>must</strong> fill out a T4A slip. This includes payments of fees for services between businesses, including sole proprietors and corporations. Depending on the situation, the payer may need to fill out a T4A-NR, T5018 or T1204 instead.</p>
 
-<h2 id="2B">Reporting and distributing the slip</h2>
-<p>Generally, if the payer pays a fee to a PSB to provide a service outside of an employment relationship or tenure of office, the payer <strong>must</strong> fill out a T4A slip. This includes payments of fees for services between businesses, including sole proprietors and corporations. Depending on the situation, the payer may need to fill out a T4A-NR, T5018 or T1204 instead.</p>
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/fees-other-amounts-services.html">Payments of fees for services</a></p>
 
-<p>If the payer distributes the slips late or does not distribute, the payer may be assessed a penalty of $25 per day per slip with a minimum penalty of $100 and a maximum of $2,500.</p>
-
-<p>Learn more:</p>
-<ul>
-<li> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/fees-other-amounts-services.html">Payments of fees for services</a></li>
-<li>Obligations to distribute the slip: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/distribute-slips.html#h_3">Distribute the slips</a></li>
-</ul>
-
-<h2 id="2C">Reporting the payment on the payer's income tax return</h2>
-<p>Generally, the payer includes the payment made to the worker in their calculation of business expenses using one of the following form when filing their income tax return:</p>
+<h2 id="2B">Income tax obligations</h2>
+<p>The payer must report and pay tax on all income earned from taxable activities. The income is the net earnings from employment, property, investments and benefits. To report and pay tax, the payer must calculate the business income and expenses using one of the following form when filing their income tax return:</p>
 <ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col"><h4>T1 return</h4> 
+<li class="cnjnctn-col"><details><summary>T1 return</summary> 
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2125.html">Form T2125</a>, Statement of Business or Professional Activities</p>
 
  <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/personal-income/self-employment-income-lines-13499-14299-gross-income-lines-13500-14300-net-income.html">Lines 13499 to 14300 – Self-employment income </a></p>
-</li>
+</details></li>
 
-<li class="cnjnctn-col"><h4>T2 return</h4> 
+<li class="cnjnctn-col"><details><summary>T2 return</summary> 
+
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125</a>, Income Statement Information</p>
 
  <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/completing-your-corporation-income-tax-t2-return.html">Completing your corporation income tax return </a></p>
-</li>	
+</details></li>
 
-<li class="cnjnctn-col"><h4>T5013 return</h4> 
+<li class="cnjnctn-col"><details><summary>T5013 return</summary> 
+
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t5013sch125.html">Schedule 125</a>, Income Statement Information</p>
 
  <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/sole-proprietorships-partnerships/t5013-partnership-information-return-filing-requirements.html">T5013 Partnership Information Return filing requirements</a></p>
-</li>
+</details></li>
+</ul>
+<h2 id="2C">GST/HST obligations</h2>
+<p>Generally, any person must open a GST/HST account, collect, file and remit (pay) the GST/HST if they provide goods or services and earn more than $30,000 over 4 calendar quarters.</p>
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">Collect, file, and remit (pay) the GST/HST</a></p>
+
+<h2 id="2D">Other tax obligations</h2>
+<p>Depending on the type of industry, the payer may have other tax obligations, for example: </p>
+<ul>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/excise-taxes-duties-levies/fuel-charge.html">Fuel charge</a></li>	
 </ul>
 
  </details>
