--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -182,23 +182,18 @@
  <details id="tab1"><summary>PSB</summary>
 <p>Understanding the PSB's tax obligations:</p>
 <ul>
-<li><a href="#1">Receiving the slip</a> </li>
-<li><a href="#1a">Reporting the income earned on the PSB's income tax return</a> </li>
-<li><a href="#1c">Payroll and GST/HST tax obligations for employees of the PSB</a> </li>
+<li><a href="#1a">Income tax obligations</a> </li>
+<li><a href="#1b">GST/HST obligations</a> </li>
+<li><a href="#1c">Other tax obligations</a> </li>
+<li><a href="#1d">Tax obligations for employees of the PSB</a> </li>
 </ul> 
 
-<h2 id="1">Receiving the slip</h2>
-<p>Generally, the payer <strong>must</strong> provide the PSB with a T4A slip which includes any <strong>fees or other amounts paid for services</strong>. Depending on the situation, the payer may provide the PSB with a T4A-NR, T5018 or T1204 instead.</p>
+<h2 id="1a">Income tax obligations</h2>
+	 
+<p>PSB who are residents of Canada are required to report their worldwide income from all sources. </p>
+<p>If the PSB is non-resident, they are subject to Canadian income tax on most Canadian-sourced income paid or credited to them during the year unless all or part of that income is exempt under a tax treaty. </p>
 
- <p>Learn more: </p>
- <ul>
- <li> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/fees-other-amounts-services.html">Payments of fees for services</a></li>
-<li>Options if the PSB does not expect to get the slip: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/tax-slips/a-copy-your-tax-slips.html">Get a copy of a slip</a></li>
- </ul>	
-
-<h2 id="1a">Reporting the income earned on the PSB's income tax return</h2>
-
-<p>When filing the <strong>T2 return</strong>, the PSB:</p>
+<p>When filing the <strong>T2 return</strong>, the PSB uses the amounts from the slip to:</p>
 <ul class="fa-ul mrgn-bttm-md">
 <li><span class="fas fa-check text-success fa-li"></span> <strong>Only</strong> claims the following <strong>eligible expenses</strong> on <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125</a>, Income Statement Information:
 <ul class="list-unstyled cnjnctn-type-and">
@@ -216,16 +211,30 @@
 
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/completing-your-corporation-income-tax-t2-return.html">Completing your corporation income tax return</a></p>
 
+<details><summary>Receiving the slip</summary>
+<p>Generally, the payer <strong>must</strong> provide the PSB with a T4A slip which includes any <strong>fees or other amounts paid for services</strong>. Depending on the situation, the payer may provide the PSB with a T4A-NR, T5018 or T1204 instead.</p>
 
-<h2 id="1c">Payroll and GST/HST tax obligations for employees of the PSB</h2>
-<p>The PSB payroll and GST/HST (including Fuel charge if the PSB is a road carrier) tax obligations for employees of the PSB are the same as regular corporations.</p>
+ <p>Learn more: </p>
+ <ul>
+ <li> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/fees-other-amounts-services.html">Payments of fees for services</a></li>
+<li>Options if the PSB does not expect to get the slip: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/tax-slips/a-copy-your-tax-slips.html">Get a copy of a slip</a></li>
+ </ul>	
+ </details>
 
-<p>Learn more: </p>
-<ul><li><a href="https://test.canada.ca/cra-arc/payroll/guidance/tax-obligations-employee.html">Employee and employer relationship</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/excise-taxes-duties-levies/fuel-charge.html">Fuel charge</a></li>
+<h2 id="1b">GST/HST obligations</h2>
+<p>Generally, any person must open a GST/HST account, collect, file and remit (pay) the GST/HST if they provide goods or services and earn more than $30,000 over 4 calendar quarters.</p>
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">Collect, file, and remit (pay) the GST/HST</a></p>
 
+<h2 id="1c">Other tax obligations</h2>
+<p>Depending on the type of industry, the PSB may have other tax obligations, for example: </p>
+<ul>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/excise-taxes-duties-levies/fuel-charge.html">Fuel charge</a></li>	
 </ul>
+
+<h2 id="1c">Tax obligations for employees of the PSB</h2>
+<p>The tax obligations for employees of the PSB are the same as regular employers.</p>
+
+<p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/guidance/tax-obligations-employee.html">Employee and employer relationship: Understand the tax obligations</a></p>
  </details>
 
 </div></div>
