--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -136,14 +136,12 @@
 <h2 id="2A">Payroll obligations </h2>
 <p>Generally, any person must open a payroll account, calculate payroll deductions and contributions, remit (pay) deductions and contributions, and file information returns if they make payments to a self-employed worker.</p>
 
-<details><summary>Withholding and remitting deductions</summary>
-<p>If the payer makes a payment related to provision of services to a PSB, the withholding and remitting are different depending on <strong>who the payment is made to</strong>.</p>
+<p>Depending on <strong>who the payment is made to</strong>, the payer may have withhold and remit the income tax, EI, CPP or GST/HST on payments made related to the provision of services to a PSB.</p>
+
+<p>Generally, if the payer makes a payment for a service outside of an employment relationship or tenure of office, the payer <strong>must</strong> fill out a T4A slip. This includes payments of fees for services between businesses, including sole proprietors and corporations. Depending on the situation, the payer may need to fill out a T4A-NR, T5018 or T1204 instead.</p>
 
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/fees-other-amounts-services.html">Payments of fees for services</a></p>
-</details>
-<p>If the payer pays a fee to a PSB to provide a service outside of an employment relationship or tenure of office, the payer <strong>must</strong> fill out a T4A slip. This includes payments of fees for services between businesses, including sole proprietors and corporations. Depending on the situation, the payer may need to fill out a T4A-NR, T5018 or T1204 instead.</p>
 
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/fees-other-amounts-services.html">Payments of fees for services</a></p>
 
 <h2 id="2B">Income tax obligations</h2>
 <p>The payer must report and pay tax on all income earned from taxable activities. The income is the net earnings from employment, property, investments and benefits. To report and pay tax, the payer must calculate the business income and expenses using one of the following form when filing their income tax return:</p>
