--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -193,7 +193,7 @@
 
 <p>When filing the <strong>T2 return</strong>, the PSB uses the amounts from the slip to:</p>
 <ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check text-success fa-li"></span> <strong>Only</strong> claims the following <strong>eligible expenses</strong> on <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125</a>, Income Statement Information:
+<li><span class="fas fa-check text-success fa-li"></span> <strong>Only</strong> claim the following <strong>eligible expenses</strong> on <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125</a>, Income Statement Information:
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col"> Salary and wages the corporation pays to their employees performing the services of a PSB</li>
 <li class="cnjnctn-col"> Any benefit or allowance the corporation provides to their employees performing the services of a PSB</li>
@@ -201,10 +201,10 @@
 <li class="cnjnctn-col"> Legal expenses incurred by the corporation in collecting amounts owing </li>
 </ul>
  </li>
-<li><span class="fas fa-check text-success fa-li"></span> Reports the PSB income on line 520 of <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch7.html">Schedule 7</a>, Aggregate Investment Income and Income Eligible for the Small Business Deduction (SBD) because they are <strong>not eligible</strong> for the SBD</li>
+<li><span class="fas fa-check text-success fa-li"></span> Report the PSB income on line 520 of <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch7.html">Schedule 7</a>, Aggregate Investment Income and Income Eligible for the Small Business Deduction (SBD) because they are <strong>not eligible</strong> for the SBD</li>
 <li><span class="fas fa-check text-success fa-li"></span> <strong>Does not claim the SBD</strong> on line 430 of the T2 return because they are <strong>not eligible</strong> for the SBD</li>
-<li><span class="fas fa-check text-success fa-li"></span> Reports the PSB income on line 432 of the T2 return because they are <strong>not eligible</strong> for the general tax reduction</li>
-<li><span class="fas fa-check text-success fa-li"></span> Reports the PSB income on line 555 of the T2 return because they are subject to <strong>an additional 5%</strong></li>
+<li><span class="fas fa-check text-success fa-li"></span> Report the PSB income on line 432 of the T2 return because they are <strong>not eligible</strong> for the general tax reduction</li>
+<li><span class="fas fa-check text-success fa-li"></span> Report the PSB income on line 555 of the T2 return because they are subject to <strong>an additional 5%</strong></li>
 </ul>
 
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/completing-your-corporation-income-tax-t2-return.html">Completing your corporation income tax return</a></p>
