--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -173,7 +173,12 @@
 <h2 id="2D">Other tax obligations</h2>
 <p>Depending on the type of industry, the payer may have other tax obligations, for example: </p>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/excise-taxes-duties-levies/fuel-charge.html">Fuel charge</a></li>	
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/excise-taxes-duties-levies/fuel-charge.html">Fuel charge</a>, for businesses that need to include a fuel charge on products</li>	
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/technical-information/excise-duty.html">Excise duties</a>, for businesses that need to charge excise duty on products</li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/technical-information/excise-taxes-special-levies.html">Excise tax and special levies</a>, for businesses that need to charge excise tax on products</li>	
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/air-travellers-security-charge-program-account.html">Air travelers security charge</a>, for air carriers that charge the air travellers security charge</li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/insurance-premium-tax-program-account.html">Insurance premium tax</a>, for brokers and agents who place contracts of insurance</li>
+<li><a href="https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies/luxury-tax/luxury-tax-registration.html">Luxury tax</a>, for businesses that need to charge luxury tax on the sale or importation of select luxury items</li>
 </ul>
 
  </details>
@@ -226,7 +231,12 @@
 <h2 id="1c">Other tax obligations</h2>
 <p>Depending on the type of industry, the PSB may have other tax obligations, for example: </p>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/excise-taxes-duties-levies/fuel-charge.html">Fuel charge</a></li>	
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/excise-taxes-duties-levies/fuel-charge.html">Fuel charge</a>, for businesses that need to include a fuel charge on products</li>	
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/technical-information/excise-duty.html">Excise duties</a>, for businesses that need to charge excise duty on products</li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/technical-information/excise-taxes-special-levies.html">Excise tax and special levies</a>, for businesses that need to charge excise tax on products</li>	
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/air-travellers-security-charge-program-account.html">Air travelers security charge</a>, for air carriers that charge the air travellers security charge</li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/insurance-premium-tax-program-account.html">Insurance premium tax</a>, for brokers and agents who place contracts of insurance</li>
+<li><a href="https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies/luxury-tax/luxury-tax-registration.html">Luxury tax</a>, for businesses that need to charge luxury tax on the sale or importation of select luxury items</li>
 </ul>
 
 <h2 id="1c">Tax obligations for employees of the PSB</h2>
