--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -172,13 +172,18 @@
 
 <h2 id="2D">Other tax obligations</h2>
 <p>Depending on the type of industry, the payer may have other tax obligations, for example: </p>
-<ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/excise-taxes-duties-levies/fuel-charge.html">Fuel charge</a>, for businesses that need to include a fuel charge on products</li>	
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/technical-information/excise-duty.html">Excise duties</a>, for businesses that need to charge excise duty on products</li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/technical-information/excise-taxes-special-levies.html">Excise tax and special levies</a>, for businesses that need to charge excise tax on products</li>	
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/air-travellers-security-charge-program-account.html">Air travelers security charge</a>, for air carriers that charge the air travellers security charge</li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/insurance-premium-tax-program-account.html">Insurance premium tax</a>, for brokers and agents who place contracts of insurance</li>
-<li><a href="https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies/luxury-tax/luxury-tax-registration.html">Luxury tax</a>, for businesses that need to charge luxury tax on the sale or importation of select luxury items</li>
+<ul class="fa-ul">
+<li><span class="fas fa-check fa-li text-success"></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/import-export-program-account.html">Import-export account (RM)</a>, for businesses that imports goods or sells goods or services abroad</li>	
+<li><span class="fas fa-check fa-li text-success"></span>  <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/completing-slips-summaries/financial-slips-summaries/information-returns-program-account.html">Information returns account (RZ)</a>, for businesses that files information returns, such as tax-free savings account (TFSA), T5, T5013, and more</li>
+<li><span class="fas fa-check fa-li text-success"></span>  <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status.html">Registered charity account (RR)</a>, for businesses that are a charity organization</li>	
+<li><span class="fas fa-check fa-li text-success"></span>  <a href="https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies/underused-housing-tax.html">Underused housing tax account (RU)</a>, for corporations that files a Underused Housing Tax return for each of their properties in Canada.</li>	
+
+<li><span class="fas fa-check fa-li text-success"></span>  <a href="https://www.canada.ca/en/revenue-agency/services/tax/excise-taxes-duties-levies/fuel-charge.html">Fuel charge account (CT)</a>, for businesses that need to include a fuel charge on products</li>	
+<li><span class="fas fa-check fa-li text-success"></span>  <a href="https://www.canada.ca/en/revenue-agency/services/tax/technical-information/excise-duty.html">Excise duties account (RD)</a>, for businesses that need to charge excise duty on products</li>
+<li><span class="fas fa-check fa-li text-success"></span>  <a href="https://www.canada.ca/en/revenue-agency/services/tax/technical-information/excise-taxes-special-levies.html">Excise tax and special levies account (RE)</a>, for businesses that need to charge excise tax on products</li>	
+<li><span class="fas fa-check fa-li text-success"></span>  <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/air-travellers-security-charge-program-account.html">Air travelers security charge account (RG)</a>, for air carriers that charge the air travellers security charge</li>
+<li><span class="fas fa-check fa-li text-success"></span>  <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/insurance-premium-tax-program-account.html">Insurance premium tax account (RN)</a>, for brokers and agents who place contracts of insurance</li>
+<li><span class="fas fa-check fa-li text-success"></span>  <a href="https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies/luxury-tax/luxury-tax-registration.html">Luxury tax account (LT)</a>, for businesses that need to charge luxury tax on the sale or importation of select luxury items</li>
 </ul>
 
  </details>
@@ -187,8 +192,8 @@
 <ul>
 <li><a href="#1a">Income tax obligations</a> </li>
 <li><a href="#1b">GST/HST obligations</a> </li>
-<li><a href="#1c">Other tax obligations</a> </li>
 <li><a href="#1d">Tax obligations for employees of the PSB</a> </li>
+<li><a href="#1c">Other tax obligations</a> </li>
 </ul> 
 
 <h2 id="1a">Income tax obligations</h2>
@@ -228,21 +233,27 @@
 <p>Generally, any person must open a GST/HST account, collect, file and remit (pay) the GST/HST if they provide goods or services and earn more than $30,000 over 4 calendar quarters.</p>
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">Collect, file, and remit (pay) the GST/HST</a></p>
 
-<h2 id="1c">Other tax obligations</h2>
-<p>Depending on the type of industry, the PSB may have other tax obligations, for example: </p>
-<ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/excise-taxes-duties-levies/fuel-charge.html">Fuel charge</a>, for businesses that need to include a fuel charge on products</li>	
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/technical-information/excise-duty.html">Excise duties</a>, for businesses that need to charge excise duty on products</li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/technical-information/excise-taxes-special-levies.html">Excise tax and special levies</a>, for businesses that need to charge excise tax on products</li>	
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/air-travellers-security-charge-program-account.html">Air travelers security charge</a>, for air carriers that charge the air travellers security charge</li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/insurance-premium-tax-program-account.html">Insurance premium tax</a>, for brokers and agents who place contracts of insurance</li>
-<li><a href="https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies/luxury-tax/luxury-tax-registration.html">Luxury tax</a>, for businesses that need to charge luxury tax on the sale or importation of select luxury items</li>
-</ul>
-
 <h2 id="1c">Tax obligations for employees of the PSB</h2>
 <p>The tax obligations for employees of the PSB are the same as regular employers.</p>
 
 <p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/guidance/tax-obligations-employee.html">Employee and employer relationship: Understand the tax obligations</a></p>
+
+<h2 id="1c">Other tax obligations</h2>
+<p>Depending on the type of industry, the PSB may have other tax obligations, for example: </p>
+<ul class="fa-ul">
+<li><span class="fas fa-check fa-li text-success"></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/import-export-program-account.html">Import-export account (RM)</a>, for businesses that imports goods or sells goods or services abroad</li>	
+<li><span class="fas fa-check fa-li text-success"></span>  <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/completing-slips-summaries/financial-slips-summaries/information-returns-program-account.html">Information returns account (RZ)</a>, for businesses that files information returns, such as tax-free savings account (TFSA), T5, T5013, and more</li>
+<li><span class="fas fa-check fa-li text-success"></span>  <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status.html">Registered charity account (RR)</a>, for businesses that are a charity organization</li>	
+<li><span class="fas fa-check fa-li text-success"></span>  <a href="https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies/underused-housing-tax.html">Underused housing tax account (RU)</a>, for corporations that files a Underused Housing Tax return for each of their properties in Canada.</li>	
+
+<li><span class="fas fa-check fa-li text-success"></span>  <a href="https://www.canada.ca/en/revenue-agency/services/tax/excise-taxes-duties-levies/fuel-charge.html">Fuel charge account (CT)</a>, for businesses that need to include a fuel charge on products</li>	
+<li><span class="fas fa-check fa-li text-success"></span>  <a href="https://www.canada.ca/en/revenue-agency/services/tax/technical-information/excise-duty.html">Excise duties account (RD)</a>, for businesses that need to charge excise duty on products</li>
+<li><span class="fas fa-check fa-li text-success"></span>  <a href="https://www.canada.ca/en/revenue-agency/services/tax/technical-information/excise-taxes-special-levies.html">Excise tax and special levies account (RE)</a>, for businesses that need to charge excise tax on products</li>	
+<li><span class="fas fa-check fa-li text-success"></span>  <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/air-travellers-security-charge-program-account.html">Air travelers security charge account (RG)</a>, for air carriers that charge the air travellers security charge</li>
+<li><span class="fas fa-check fa-li text-success"></span>  <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/insurance-premium-tax-program-account.html">Insurance premium tax account (RN)</a>, for brokers and agents who place contracts of insurance</li>
+<li><span class="fas fa-check fa-li text-success"></span>  <a href="https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies/luxury-tax/luxury-tax-registration.html">Luxury tax account (LT)</a>, for businesses that need to charge luxury tax on the sale or importation of select luxury items</li>
+</ul>
+
  </details>
 
 </div></div>
