--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -254,7 +254,7 @@
 <p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/guidance/tax-obligations-employee.html">Employee and employer relationship: Understand the tax obligations</a></p>
 
 <h2 id="1c">Other tax obligations</h2>
-<p>Depending on the type of industry, the payer may have other tax obligations, for example: </p>
+<p>Depending on the type of industry, the self-employed worker may have other tax obligations, for example: </p>
 <ul class="fa-ul">
 <li><span class="fas fa-check fa-li text-success"></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/import-export-program-account.html">Import-export account (RM)</a>, for businesses that imports goods or sells goods or services abroad</li>	
 <li><span class="fas fa-check fa-li text-success"></span>  <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/completing-slips-summaries/financial-slips-summaries/information-returns-program-account.html">Information returns account (RZ)</a>, for businesses that files information returns, such as tax-free savings account (TFSA), T5, T5013, and more</li>
