--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -290,7 +290,7 @@
 			   <div class="col-md-6">
                   <h4 class="mrgn-tp-sm text-muted">Do not</h4>
                   <ul class="fa-ul">
-                     <li><span class="fas fa-times text-danger fa-li"></span> Do not show negative dollar amounts on slips <strong>(except for code 37)</strong>. Learn more: <a href="/cra-arc/payroll/file/corrections.html">Make corrections after filing</a> </li>
+                     <li><span class="fas fa-times text-danger fa-li"></span> Do not show negative dollar amounts on slips <strong>(except for code 37)</strong>. Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing.html">Make corrections after filing</a> </li>
                      <li><span class="fas fa-times text-danger fa-li"></span> If a box does not have a value, do not enter "nil" or "N/A", leave the box blank </li>
                      <li><span class="fas fa-times text-danger fa-li"></span> Do not change the headings of any of the boxes </li>
                      <li><span class="fas fa-times text-danger fa-li"></span> Do not enter hyphens or dashes between numbers </li>
@@ -353,7 +353,7 @@
             <p> <strong>Do not enter </strong>titles, such as Director, Mr., or Mrs. </p>
             <p>Enter the recipient’s home address, including the province or territory, the postal code and the country.</p>
 
-<p><strong>Do not</strong> use the recipient's address area to enter the recipient's number, use <a href="#cd_14">code 014</a> or the recipient's name area.</p>
+<p><strong>Do not</strong> use the recipient's address area to enter the recipient's number, use <a href="#cd014">code 014</a> or the recipient's name area.</p>
 
                 </details>
  </li>
@@ -586,7 +586,7 @@
 <dd><strong>Do not</strong> report annuity payments you paid to an employee, retired employee, or survivor or spouse of an employee out of, or under, a superannuation or pension fund or plan, including disability benefits paid&nbsp;as a life annuity using box 024, use <a href="#bx016">box 016</a>.</dd>
 
 <dt>Life insurance policy </dt>
-<dd><strong>Do not</strong> report annuity payments for accrued income from a life insurance policy that you include when you calculate a person's income under the provisions of section 12.2 of the Income Tax Act using the T4A slip, use the <a href="/en/revenue-agency/services/forms-publications/forms/t5.html">T5 slip</a>.</dd>
+<dd><strong>Do not</strong> report annuity payments for accrued income from a life insurance policy that you include when you calculate a person's income under the provisions of section 12.2 of the Income Tax Act using the T4A slip, use the <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t5.html">T5 slip</a>.</dd>
 
 <dt>Non-residents</dt>
 <dd><strong>Do not</strong> report annuity payments to a non-resident using the T4a slip, use the <a href="https://www.canada.ca/content/dam/cra-arc/formspubs/pbg/nr4/nr4-21e.pdf">NR4 slip</a>.</dd>
