--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -220,7 +220,7 @@
                <div class="col-md-6">
                   <h4 class="mrgn-tp-sm text-muted">Do not report</h4>
                   <ul class="fa-ul">
-                     <li><span class="fas fa-times text-danger fa-li"></span>If you paid pensions, lump-sum payments, annuities, or other income (including amounts paid to a proprietor or partner of an unincorporated business) use: <a href="t4slip.html">T4A slips - Information for payers</a></li>
+                     <li><span class="fas fa-times text-danger fa-li"></span>If you paid pensions, lump-sum payments, annuities, or other income (including amounts paid to a proprietor or partner of an unincorporated business) use: <a href="https://test.canada.ca/cra-arc/payroll/file/t4aslip.html">T4A slips - Information for payers</a></li>
                      <li><span class="fas fa-times text-danger fa-li"></span>If you paid amounts from a retirement compensation agreement use: <a href="t4arcaslip.html">T4A-RCA slips - Retirement Compensation Arrangement (RCA) trust</a></li>
                      <li><span class="fas fa-times text-danger fa-li"></span>If you paid fees (except for director fees), commissions, or other amounts to a non-resident for services rendered in Canada, other than employment situations:  use <a href="t4anrslip.html">T4A-NR slips - Payments to non-residents for services provided in Canada</a>  </li>
                      <li><span class="fas fa-times text-danger fa-li"></span>If you are an employer with construction as your primary source of business income use: <a href="t1204slip.html">T1204 - Government services contract payments</a> or <a href="t5018slip.html">T5018 - Statement of contract payments </a></li>
@@ -248,7 +248,7 @@
             <div class="col-md-6">
             <h4 class="mrgn-tp-sm text-muted">Do not</h4>
             <ul class="fa-ul">
-            <li><span class="fas fa-times text-danger fa-li"></span> Do not show negative dollar amounts on slips, to make changes to previous years. Learn more: <a href="/cra-arc/payroll/file/corrections.html">Make corrections after filing</a> </li>
+            <li><span class="fas fa-times text-danger fa-li"></span> Do not show negative dollar amounts on slips, to make changes to previous years. Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing.html">Make corrections after filing</a> </li>
             <li><span class="fas fa-times text-danger fa-li"></span> If a box does not have a value, do not enter "nil" or "N/A", leave the box blank </li>
             <li><span class="fas fa-times text-danger fa-li"></span> Do not change the headings of any of the boxes </li>
             <li><span class="fas fa-times text-danger fa-li"></span> Do not enter hyphens or dashes between numbers </li>
@@ -1170,7 +1170,7 @@
  </dd>
 
 <dt>Periods of leave or reduced services under a <abbr title="Multi-employer plan">MEP</abbr></dt>
-<dd><strong>Do not</strong> report the amount of a <abbr title="Pension adjustment">PA</abbr> for periods of leave or reduced services if you are the plan administrator for a <abbr title="Multi-employer plan">MEP</abbr> using box 52, use the <a href="/cra-arc/payroll/file/t4Aslip.html">T4A slip</a>. </dd>
+<dd><strong>Do not</strong> report the amount of a <abbr title="Pension adjustment">PA</abbr> for periods of leave or reduced services if you are the plan administrator for a <abbr title="Multi-employer plan">MEP</abbr> using box 52, use the <a href="https://test.canada.ca/cra-arc/payroll/file/t4aslip.html">T4A slip</a>. </dd>
 
 <dt>More than 1 slip</dt>
 <dd>Report the <abbr title="pension adjustment">PA</abbr> proportionately on each T4 slip if you have to fill out more than one T4 slip because they worked in more than one province or territory. If you cannot apportion the <abbr title="Pension adjustment">PA</abbr>, report the total amount on one slip.</dd>
